--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#2563EB" />
     <meta name="description" content="Aplicativo de controle financeiro doméstico para Rodolfo e Thaís" />
-    <title>Controle Financeiro - Rodolfo & Thaís</title>
+    <title>Controle Financeiro</title>
   </head>
   <body>
     <div id="root"></div>
